tests/transpiler/x/zig/fun_expr_in_let.zig
// Generated by Mochi Zig transpiler on 2025-07-20 10:11 +0000
const std = @import("std");

fn fn_0(x: i64) i64 {
    return x * x;
}

pub fn main() void {
    const square = fn_0;
    std.debug.print("{any}\n", .{square(6)});
}
